# person_tg_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: .env.template  config.py  main.py
src/bot/: bot_type.py  client.py  handlers.py  schemas.py
src/tests/: test_client.py
tg/: config.py  exmp_send_message.py
