[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
pydantic = {version = "1.10.22", extras = ["dotenv"]}
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
tg-api = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
pytest-httpx = "^0.35.0"


[tool.flake8]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "W503",  # Line break occurred before a binary operator, conflicts with W504:
             # https://github.com/mila-iqia/cookiecutter-pyml/issues/10
]
max-line-length = 120
max-complexity = 12
exclude = "migrations"
count = true
import-order-style = "edited"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy",
]
exclude = [
    "migrations",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
cache_dir = "/pytest_cache_dir"
